kubernetes-experimentation/lamk/data-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-api
  name: data-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
    spec:
      imagePullSecrets:
        - name: do-registry-credentials
      containers:
      - image: registry.digitalocean.com/lamk/data-api:1.0.99
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        name: data-api
        ports:
        - containerPort: 80
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: data-api
spec:
  selector:
    app: data-api
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
