kubernetes-experimentation/lamk/search.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: search
  name: search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      volumes:
      - name: search-data
      containers:
      - image: typesense/typesense:0.14.0
        volumeMounts:
        - mountPath: /data
          name: search-data
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        name: search
        ports:
        - containerPort: 8108
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: search
spec:
  selector:
    app: search
  type: ClusterIP
  ports:
  - port: 8108
    targetPort: 8108
