kubernetes-experimentation/lamk/store-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: store-ui
  name: store-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-ui
  template:
    metadata:
      labels:
        app: store-ui
    spec:
      imagePullSecrets:
        - name: do-registry-credentials
      containers:
      - image: registry.digitalocean.com/lamk/store-ui:1.0.144
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        name: store-ui
        ports:
        - containerPort: 80
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: store-ui
spec:
  selector:
    app: store-ui
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
